# zcw_android_demo

./: README.md  Untitled Diagram.drawio
Android_summary/: settings.gradle
Android_summary/app/: build.gradle
TestFlutterPlugin/: settings.gradle
TestFlutterPlugin/app/: build.gradle
TestFlutterPlugin/flutter_module/: pubspec.yaml
TestViewmodel/: build.gradle  settings.gradle
TestViewmodel/app/: build.gradle
android_ASMInject/: build.gradle  settings.gradle
android_ASMInject/app/: build.gradle
android_ASMInject/asm_plugin/: build.gradle
android_ASMInject/buildSrc/: build.gradle
android_EnjoyMMKV/: build.gradle
android_EnjoyMMKV/app/: build.gradle
android_EnjoyMMKV/app/src/main/cpp/: CMakeLists.txt  InputBuffer.cpp  InputBuffer.h  MMKV.cpp  MMKV.h  MMKVLog.h  OutputBuffer.cpp  OutputBuffer.h  native-lib.cpp
android_EnjoyMMKV_2/: settings.gradle
android_EnjoyMMKV_2/app/: build.gradle
android_MMKV/: MMKV.pptx  build.gradle  local.properties  mmkv
android_MMKV/app/: CMakeLists.txt  a.gradle  build.gradle  mmkv.keystore
android_MMKV/app/src/main/: AndroidManifest.xml
android_MMKV/app/src/main/cpp/: InterProcessLock.cpp  MMKV.cpp  MMKV.h  MMKVMetaInfo.hpp  MmapedFile.cpp  MmapedFile.h  ProtoBuf.cpp  ProtoBuf.h  ScopedLock.h  ThreadLock.cpp  ThreadLock.h  native-lib.cpp
android_MMKV/app/src/main/java/com/enjoy/mmkv/: MMKV.java  MainActivity.java  SecondActivity.java
android_MMKV/app/src/main/res/layout/: activity_main.xml
android_MMKV/app/src/main/res/values/: strings.xml
android_MMKVTest/: build.gradle
android_MMKVTest/app/: CMakeLists.txt  build.gradle
android_aidl/: build.gradle  settings.gradle
android_aidl/activityhookdemo/: build.gradle
android_aidl/app/: build.gradle
android_aidl/docs/: aidl.drawio  binder.vsdx
android_apng/: settings.gradle
android_apng/app/: build.gradle
android_apt/: settings.gradle
android_apt/app/: build.gradle
android_camera/app/: build.gradle
android_customui/: README.md  build.gradle  settings.gradle
android_customui/app/: build.gradle
android_customui/aspectj/: build.gradle
android_customui/robmoneydemo/: build.gradle
android_dagger2/: readme.md  settings.gradle
android_dagger2/app/: build.gradle
android_data/: README.md  settings.gradle
android_data/app/: build.gradle
android_db/app/: build.gradle
android_effect/: settings.gradle
android_effect/app/: build.gradle
android_ffmpeg/app/: CMakeLists.txt  READEME.md  build.gradle
android_ffmpeg/app/src/androidTest/java/top/zcwfeng/zcwffmpeg/: ExampleInstrumentedTest.java
android_ffmpeg/app/src/main/: AndroidManifest.xml
android_ffmpeg/app/src/main/cpp/: FFMpegUtils.cpp  FFMpegUtils.h  native-lib.cpp
android_ffmpeg/app/src/main/java/top/zcwfeng/zcwffmpeg/: FFMpegUtils.java  MainActivity.java
android_ffmpeg/app/src/main/jniLibs/include/libavutil/: ffversion.h
android_ffmpeg/app/src/main/res/layout/: activity_main.xml
android_ffmpeg/app/src/main/res/values/: strings.xml
android_ffmpeg/app/src/test/java/top/zcwfeng/zcwffmpeg/: ExampleUnitTest.java
android_flowlayout/app/: build.gradle
android_fragment/: README.md
android_fresco/: settings.gradle
android_giflib/: README.md  settings.gradle
android_giflib/app/src/main/cpp/: CMakeLists.txt  GifFrame.cpp  GifFrame.h  JavaInputStream.cpp  JavaInputStream.h  log.h  native-lib.cpp
android_glide/: build.gradle  settings.gradle
android_hilt/: build.gradle  settings.gradle
android_hotfix/: settings.gradle
android_jetpack/: build.gradle  settings.gradle
android_jni/: README.md  build.gradle  settings.gradle
android_jni/app/src/main/cpp/: CMakeLists.txt  CacheDemo.cpp  ExceptionHandle.cpp  ExternalTest.cpp  bspatch.c  fmod_demo.cpp  mmap_demo.cpp  native-lib.cpp  native_register.cpp
android_jni/app/src/main/cpp/include/: common_head.h  fmod_demo.h  top_zcwfeng_jni_JavaJNIActivity.h  top_zcwfeng_jni_customparcel_ZParcel.h
android_jni/app/src/main/cpp/include/fmod/: fmod_common.h
android_jni/app/src/main/cpp/parcel_custom/: Parcel.cpp  Parcel.h
android_kotlin/: build.gradle  settings.gradle
android_lifecycle/: readme.md  settings.gradle
android_mlkit/: build.gradle  settings.gradle
android_mvp/: build.gradle  settings.gradle
android_network/: build.gradle  settings.gradle
android_news/: build.gradle  cc-settings-2.gradle  readme.md  settings.gradle
android_news_hilt/: .gitignore  build.gradle
android_news_mvvm/: build.gradle  docs.md
android_news_mvvm_opt/: build.gradle  settings.gradle
android_okhttp/: READEME.md
android_opengl/: docs.md  settings.gradle
android_opengl/app/src/main/cpp/: CMakeLists.txt  FaceTrack.cpp  FaceTrack.h  native-lib.cpp
android_opengl/app/src/main/cpp/include/seeta/: SeetaDetectorExport.h  SeetaFaceTrackerExport.h  SeetaLandmarkerExport.h  SeetaNetExport.h  SeetaRecognizerExport.h
android_paging/: settings.gradle
android_permission/: READEME.md  gradle.properties  settings.gradle
android_plugin/: docs.md  settings.gradle
android_recyclerview/: README.md
android_retrofit/: settings.gradle
android_routers/: build.gradle  settings.gradle
android_skin/: settings.gradle
android_sqlite/: settings.gradle
android_taskdemo/: build.gradle  settings.gradle
android_webview/: build.gradle  readme.drawio  readme.md  settings.gradle
android_worker/: settings.gradle
android_yangyang/: README.md  settings.gradle
docs/:  kali.drawio  AMS.xmind  ClassLoader.drawio  android.drawio  android_MMKV.drawio  android_OpenCv.drawio  android_ffmpeg.drawio  android_system.drawio  android_插件化.drawio  android_架构.drawio  android_组件化.drawio  keystore  架构.drawio  系统资源加载流程.xmind  面试知识点.km
materialdesign/: settings.gradle
okhttp/: build.gradle  gradle.properties  settings.gradle
viewdemo/: settings.gradle
(+2182 files in other folders)
